loopdowhile.LoopDoWhile.scala.error
Compilation error:
LoopDoWhile:5: error: 'while' expected but '}' found.
	}
        ^